--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "@react-aria/ssr": "3.9.7",
   "@react-aria/visually-hidden": "3.8.19",
   "clsx": "2.1.1",
+  "dayjs": "^1.11.13",
   "framer-motion": "11.13.1",
   "intl-messageformat": "^10.5.0",
   "lucide-react": "^0.475.0",
