--- a/package.json
+++ b/package.json
@@ -1,61 +1,75 @@
 {
- "name": "next-app-template",
- "version": "0.0.1",
- "private": true,
- "scripts": {
-  "dev": "next dev --turbopack",
-  "build": "next build",
-  "start": "next start",
-  "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
- },
- "dependencies": {
-  "@heroui/button": "2.2.13",
-  "@heroui/code": "2.2.10",
-  "@heroui/input": "2.4.13",
-  "@heroui/kbd": "2.2.10",
-  "@heroui/link": "2.2.11",
-  "@heroui/listbox": "2.3.13",
-  "@heroui/navbar": "2.2.12",
-  "@heroui/react": "^2.7.2",
-  "@heroui/snippet": "2.2.14",
-  "@heroui/switch": "2.2.12",
-  "@heroui/system": "2.4.10",
-  "@heroui/theme": "2.4.9",
-  "@react-aria/ssr": "3.9.7",
-  "@react-aria/visually-hidden": "3.8.19",
-  "clsx": "2.1.1",
-  "dayjs": "^1.11.13",
-  "framer-motion": "11.13.1",
-  "intl-messageformat": "^10.5.0",
-  "lucide-react": "^0.475.0",
-  "next": "15.0.4",
-  "next-themes": "^0.4.4",
-  "react": "18.3.1",
-  "react-dom": "18.3.1"
- },
- "devDependencies": {
-  "@next/eslint-plugin-next": "15.0.4",
-  "@react-types/shared": "3.25.0",
-  "@types/node": "20.5.7",
-  "@types/react": "18.3.3",
-  "@types/react-dom": "18.3.0",
-  "@typescript-eslint/eslint-plugin": "8.11.0",
-  "@typescript-eslint/parser": "8.11.0",
-  "autoprefixer": "10.4.19",
-  "eslint": "^8.57.0",
-  "eslint-config-next": "15.0.4",
-  "eslint-config-prettier": "9.1.0",
-  "eslint-plugin-import": "^2.26.0",
-  "eslint-plugin-jsx-a11y": "^6.4.1",
-  "eslint-plugin-node": "^11.1.0",
-  "eslint-plugin-prettier": "5.2.1",
-  "eslint-plugin-react": "^7.23.2",
-  "eslint-plugin-react-hooks": "^4.6.0",
-  "eslint-plugin-unused-imports": "4.1.4",
-  "postcss": "8.4.49",
-  "prettier": "3.3.3",
-  "tailwind-variants": "0.3.0",
-  "tailwindcss": "3.4.16",
-  "typescript": "5.6.3"
- }
+    "name": "next-app-template",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "test": "set NODE_OPTIONS=--experimental-vm-modules && jest",
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
+    },
+    "dependencies": {
+        "@heroui/button": "2.2.13",
+        "@heroui/code": "2.2.10",
+        "@heroui/input": "2.4.13",
+        "@heroui/kbd": "2.2.10",
+        "@heroui/link": "2.2.11",
+        "@heroui/listbox": "2.3.13",
+        "@heroui/navbar": "2.2.12",
+        "@heroui/react": "^2.7.2",
+        "@heroui/snippet": "2.2.14",
+        "@heroui/switch": "2.2.12",
+        "@heroui/system": "2.4.10",
+        "@heroui/theme": "2.4.9",
+        "@next-auth/prisma-adapter": "^1.0.7",
+        "@prisma/client": "^6.4.1",
+        "@prisma/extension-accelerate": "^1.2.2",
+        "@react-aria/ssr": "3.9.7",
+        "@react-aria/visually-hidden": "3.8.19",
+        "clsx": "2.1.1",
+        "dayjs": "^1.11.13",
+        "dotenv": "^16.4.7",
+        "framer-motion": "11.13.1",
+        "intl-messageformat": "^10.5.0",
+        "ldapts": "^7.3.1",
+        "lucide-react": "^0.475.0",
+        "next": "15.0.4",
+        "next-auth": "^4.24.11",
+        "next-themes": "^0.4.4",
+        "prisma": "^6.4.1",
+        "react": "18.3.1",
+        "react-dom": "18.3.1",
+        "zod": "^3.24.2"
+    },
+    "devDependencies": {
+        "@jest/globals": "^29.7.0",
+        "@next/eslint-plugin-next": "15.0.4",
+        "@react-types/shared": "3.25.0",
+        "@types/jest": "^29.5.14",
+        "@types/node": "20.5.7",
+        "@types/react": "18.3.3",
+        "@types/react-dom": "18.3.0",
+        "@typescript-eslint/eslint-plugin": "8.11.0",
+        "@typescript-eslint/parser": "8.11.0",
+        "autoprefixer": "10.4.19",
+        "eslint": "^8.57.0",
+        "eslint-config-next": "15.0.4",
+        "eslint-config-prettier": "9.1.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "5.2.1",
+        "eslint-plugin-react": "^7.23.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-unused-imports": "4.1.4",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "postcss": "8.4.49",
+        "prettier": "3.3.3",
+        "tailwind-variants": "0.3.0",
+        "tailwindcss": "3.4.16",
+        "ts-jest": "^29.2.6",
+        "typescript": "5.6.3"
+    }
 }
