--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "dev": "next dev --turbopack",
         "build": "next build",
         "start": "next start",
-        "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
+        "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix",
+        "seed": "ts-node prisma/seed.ts",
+        "client": "npx prisma studio"
     },
     "dependencies": {
         "@heroui/button": "2.2.13",
@@ -70,6 +72,7 @@
         "tailwind-variants": "0.3.0",
         "tailwindcss": "3.4.16",
         "ts-jest": "^29.2.6",
-        "typescript": "5.6.3"
+        "ts-node": "^10.9.2",
+        "typescript": "^5.6.3"
     }
 }
