fix and handle form errors for module authentication

--- a/.vscode/.typos.toml
+++ b/.vscode/.typos.toml
@@ -1,2 +1,2 @@
 [default]
-extend-ignore-words = ["Responsable", "contener", "hace"]
+extend-ignore-words = ["Responsable", "contener", "hace", "contener"]
