--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@heroui/switch": "2.2.12",
         "@heroui/system": "2.4.10",
         "@heroui/theme": "2.4.9",
+        "@iconify/react": "^5.2.0",
         "@next-auth/prisma-adapter": "^1.0.7",
         "@prisma/client": "^6.4.1",
         "@prisma/extension-accelerate": "^1.2.2",
