--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
         "prisma": "^6.4.1",
         "react": "18.3.1",
         "react-dom": "18.3.1",
-        "zod": "^3.24.2"
+        "zod": "^3.24.2",
+        "zustand": "^5.0.3"
     },
     "devDependencies": {
         "@jest/globals": "^29.7.0",
